# AoC-2024

./: .gitignore  Cargo.toml
Day_1/: part_1.rs  part_2.rs
Day_2/: part_1.rs  part_2.rs
Day_3/: part_1.rs  part_2.rs
Day_4/: part_1.rs  part_2.rs
Day_5/: part_1.rs  part_2.rs
Day_6/: part_1.rs  part_2.rs
Day_7/: part_1.rs  part_2.rs
Day_8/: part_1.rs  part_2.rs
Day_9/: part_1.rs
