[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[[bin]]
name = "day1_part1"
path = "Day_1/part_1.rs"

[[bin]]
name = "day1_part2"
path = "Day_1/part_2.rs"

[[bin]]
name = "day2_part1"
path = "Day_2/part_1.rs"

[[bin]]
name = "day2_part2"
path = "Day_2/part_2.rs"

[[bin]]
name = "day3_part1"
path = "Day_3/part_1.rs"

[[bin]]
name = "day3_part2"
path = "Day_3/part_2.rs"

[[bin]]
name = "day4_part1"
path = "Day_4/part_1.rs"

[[bin]]
name = "day4_part2"
path = "Day_4/part_2.rs"

[[bin]]
name = "day6_part1"
path = "Day_6/part_1.rs"

[[bin]]
name = "day6_part2"
path = "Day_6/part_2.rs"